Update .get() calls to .getFirst() for better readability
Replaced .get(index) with .getFirst() and similar changes to enhance code readability and maintain consistency. This minor modification impacts several classes, including TableResolver, ParagraphRepeatProcessor, and PowerpointParagraph.